--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo" data-aos="zoom-in" data-aos-duration="1500">
-                <span>Mahadevan</span>
+                <span>Mahadevan.T.R</span>
             </div>
             <div class="links">
                 <div class="link"><a href="#home">Home</a></div>
@@ -36,13 +36,14 @@
             </div>
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1500" data-aos-delay="700">
-                    Hi, I'm <span>Mahadevan</span>
+                    Hi, I'm <span>Mahadevan.T.R</span>
                 </h1>
                 <div class="typewriter" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900">
-                    Aspiring Software Engineer | Final Year Student
+                    Aspiring Software Engineer | FRESHER
                 </div>
                 <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">
-                    I am a final-year Computer Science and Engineering student from APJ Abdul Kalam Technological University.
+                    Aspiring software developer with expertise in full-stackdevelopment and cloud-native application design. Strong foundation in modern development frameworks, DevOpspractices, and cloud computing platforms. Completed
+CodeAcademy Full Stack Developer course and Google Cloud Certified Professional Cloud Developer certification,and currently pursuing AWS Certified Developer – Associate.Seeking an opportunity to apply technical skills to real-world projects and contribute to scalable, efficient solutions.
                 </p>
                 <div class="social-links">
                     <a href="#" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
